--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
        <!-- stylesheet start -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css"
+    <!-- <link rel="stylesheet" type="text/css"
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap-select.min.css">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap-datetimepicker.min.css">
@@ -32,28 +32,16 @@
     <link rel="stylesheet" type="text/css" href="./css/lity.min.css">
     <link rel="stylesheet" type="text/css" href="./css/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
-    <link rel="stylesheet" type="text/css" href="./css/aos.css">
+    <link rel="stylesheet" type="text/css" href="./css/aos.css"> -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
   crossorigin="anonymous"
-/>
- <!-- Scripts -->
+    />
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <!-- Scripts -->
 
- <script src="%PUBLIC_URL%/js/vendor/jquery-3.4.1.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/moment.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/popper.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/bootstrap.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/bootstrap-datetimepicker.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/bootstrap-select.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/slick.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/lity.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/jquery.magnific-popup.min.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/jquery.slimscroll.min.js"></script>
- <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
- <script src="%PUBLIC_URL%/js/vendor/aos.js"></script>
- <script src="%PUBLIC_URL%/js/map.js "></script>
- <script src="%PUBLIC_URL%/js/script.js"></script>
 
     <title>Openspace-React</title>
 </head>
