[#16]cannot GET / on reloading routes fixed

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -23,7 +24,7 @@
 
        <!-- stylesheet start -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" type="text/css"
+   <link rel="stylesheet" type="text/css"
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap-select.min.css">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap-datetimepicker.min.css">
@@ -32,7 +33,7 @@
     <link rel="stylesheet" type="text/css" href="./css/lity.min.css">
     <link rel="stylesheet" type="text/css" href="./css/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
-    <link rel="stylesheet" type="text/css" href="./css/aos.css"> -->
+    <link rel="stylesheet" type="text/css" href="./css/aos.css"> 
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
