search button working fixed

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     
     
 
-    <title>Openspace-React</title>
+    <title>Humanitarian Openspace Portal</title>
 </head>
 <body>
     <div id="app"></div>
