added analytics script on head tag

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,14 @@
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="style" onload="this.rel='stylesheet'">
 
     <title>Humanitarian Openspace Portal</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158606502-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-158606502-3');
+</script>
 </head>
 <body>
     <div id="app"></div>
