styles on home page

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
      <meta name="twitter:image" content="preview.html">
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="style" onload="this.rel='stylesheet'">
       <link href="https://cdn.jsdelivr.net/npm/leaflet-extra-markers@1.0.6/dist/css/leaflet.extra-markers.min.css" rel="stylesheet">
+      <link rel="icon" href="./img/favIcon.png?" type="image/gif" sizes="16x16">
     <title>Humanitarian Openspace Portal</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158606502-3"></script>
