--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
      <meta name="twitter:description" content="Open Space Portal">
      <meta name="twitter:image" content="preview.html">
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="style" onload="this.rel='stylesheet'">
-     
-      <link rel="icon" href="./img/favIcon.png?" type="image/gif" sizes="16x16">
+    
+      <!-- <link rel="icon" href="./img/favIcon.png?" type="image/gif" sizes="16x16"> -->
     <title>Humanitarian Openspace Portal</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158606502-3"></script>
@@ -36,6 +36,6 @@
 </head>
 <body>
     <div id="app"></div>
-
+ 
 </body>
 </html>
